Adding AltSpellings Changing namespace from Country to Countries Adding preferences for what is returned Adding Readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /vendor/
-.idea
 composer.lock
+.idea/copyright
+.idea/compiler.xml
+.idea/country-codes.iml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
