--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.4"
+    "phpunit/phpunit": "5.7.27 - 8"
   },
   "autoload": {
     "psr-4": {
