--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": "^5.6 || ^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.27 - 9.0.0"
+    "phpunit/phpunit": "5.7.27 - 8 || ^9"
   },
   "autoload": {
     "psr-4": {
