--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,19 @@
     }
   ],
   "require": {
-    "php": "^5.6 || ^7.0"
+    "php": "^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.27 - 8 || ^9"
+    "phpunit/phpunit": "^10.5.0",
+    "squizlabs/php_codesniffer": "^3.0"
+  },
+  "scripts": {
+    "test": [
+      "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests"
+    ],
+    "phpcs": [
+      "./vendor/bin/phpcs --standard=PSR12 ./src"
+    ]
   },
   "autoload": {
     "psr-4": {
