--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
+.idea
+.vscode
 /vendor/
 composer.lock
-.idea/copyright
-.idea/compiler.xml
-.idea/country-codes.iml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/workspace.xml
 .phpunit.result.cache
