--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": "^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.5.0",
+    "phpunit/phpunit": "^9.0 || ^10.5.0",
     "squizlabs/php_codesniffer": "^3.0"
   },
   "scripts": {
