--- a/composer.json
+++ b/composer.json
@@ -10,23 +10,27 @@
     }
   ],
   "require": {
-    "php": "^8.0"
+    "php": "^7.4 || ^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": ">9.0",
+    "phpunit/phpunit": "^9.0 || ^10.5 || ^11.0",
     "squizlabs/php_codesniffer": "^3.0"
   },
   "scripts": {
     "test": [
+      "php ./config/phpunit.xml.php",
       "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests"
     ],
     "phpcs": [
-      "./vendor/bin/phpcs --standard=PSR12 ./src"
+      "./vendor/bin/phpcs -s --standard=./config/phpcs.xml ./src"
     ]
   },
   "autoload": {
     "psr-4": {
       "Countries\\": "src/"
     }
+  },
+  "config": {
+    "sort-packages": true
   }
 }
