--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -24,7 +24,16 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          coverage: none
+          coverage: xdebug
+      
+      - name: Install Xdebug for PHP 8.3
+        if: matrix.php == '8.3'
+        run: |
+          echo "Installing Xdebug..."
+          pecl install xdebug
+          echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini
+          echo "xdebug.mode=coverage" >> /usr/local/etc/php/conf.d/xdebug.ini
+          echo "xdebug.start_with_request=yes" >> /usr/local/etc/php/conf.d/xdebug.ini
 
       - uses: actions/checkout@v3
 
